--- a/packages/forest/src/primitives/box/box.mdx
+++ b/packages/forest/src/primitives/box/box.mdx
@@ -9,5 +9,5 @@ import { Box } from 'piny-forest'
 Base layout primitive, `div` by default.
 
 ```jsx live
-<Box s={64} m="auto" bg="primary" />
+<Box s={64} m="auto" bg="blue" />
 ```
