--- a/packages/forest/src/primitives/button/button.mdx
+++ b/packages/forest/src/primitives/button/button.mdx
@@ -11,7 +11,7 @@ import { Button } from 'piny-forest'
   theme={{
     buttons: {
       primary: {
-        backgroundColor: 'primary',
+        backgroundColor: 'blue',
         color: 'white',
         paddingX: 's.8',
         paddingY: 's.4',
