--- a/packages/forest/src/primitives/provider/provider.mdx
+++ b/packages/forest/src/primitives/provider/provider.mdx
@@ -8,6 +8,6 @@ import { Theme, Provider } from 'piny-forest'
 
 ```jsx live
 <Provider theme={Theme}>
-  <Box bg="primary" s={64} />
+  <Box bg="blue" s={64} />
 </Provider>
 ```
