♻️ Improve get focusable elements

--- a/packages/forest/src/components/dialog/dialog.mdx
+++ b/packages/forest/src/components/dialog/dialog.mdx
@@ -36,7 +36,7 @@ function Demo() {
             />
           </WelcomeFormFields>
           <WelcomeFormActions>
-            <Button type="submit" variant="contrast">
+            <Button type="submit" variant="contrast" autoFocus>
               Next
             </Button>
           </WelcomeFormActions>
